@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -32,14 +32,14 @@ import javax.ws.rs.HttpMethod;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.openhab.binding.synopanalyser.internal.synop.Overcast;
-import org.openhab.binding.synopanalyser.internal.synop.StationDB;
-import org.openhab.binding.synopanalyser.internal.synop.Synop;
-import org.openhab.binding.synopanalyser.internal.synop.SynopLand;
-import org.openhab.binding.synopanalyser.internal.synop.SynopMobile;
-import org.openhab.binding.synopanalyser.internal.synop.SynopShip;
-import org.openhab.binding.synopanalyser.internal.synop.WindDirections;
 import org.openhab.binding.synopanalyzer.internal.config.SynopAnalyzerConfiguration;
+import org.openhab.binding.synopanalyzer.internal.stationdb.Station;
+import org.openhab.binding.synopanalyzer.internal.synop.Overcast;
+import org.openhab.binding.synopanalyzer.internal.synop.Synop;
+import org.openhab.binding.synopanalyzer.internal.synop.SynopLand;
+import org.openhab.binding.synopanalyzer.internal.synop.SynopMobile;
+import org.openhab.binding.synopanalyzer.internal.synop.SynopShip;
+import org.openhab.binding.synopanalyzer.internal.synop.WindDirections;
 import org.openhab.core.i18n.LocationProvider;
 import org.openhab.core.io.net.http.HttpUtil;
 import org.openhab.core.library.types.DateTimeType;
@@ -51,6 +51,7 @@ import org.openhab.core.library.unit.SIUnits;
 import org.openhab.core.thing.ChannelUID;
 import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.ThingStatus;
+import org.openhab.core.thing.ThingStatusDetail;
 import org.openhab.core.thing.binding.BaseThingHandler;
 import org.openhab.core.types.Command;
 import org.openhab.core.types.RefreshType;
@@ -68,6 +69,9 @@ import org.slf4j.LoggerFactory;
  */
 @NonNullByDefault
 public class SynopAnalyzerHandler extends BaseThingHandler {
+    private static final String DISTANCE = "Distance";
+    private static final String LOCATION = "Location";
+    private static final String USUAL_NAME = "Usual name";
     private static final String OGIMET_SYNOP_PATH = "http://www.ogimet.com/cgi-bin/getsynop?block=%s&begin=%s";
     private static final int REQUEST_TIMEOUT_MS = 5000;
     private static final DateTimeFormatter SYNOP_DATE_FORMAT = DateTimeFormatter.ofPattern("yyyyMMddHH00");
@@ -75,46 +79,45 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
     private static final double OCTA_MAX = 8.0;
 
     private final Logger logger = LoggerFactory.getLogger(SynopAnalyzerHandler.class);
-
-    private @Nullable ScheduledFuture<?> executionJob;
-    private @NonNullByDefault({}) String formattedStationId;
     private final LocationProvider locationProvider;
-    private final @Nullable StationDB stationDB;
+    private final List<Station> stations;
 
-    public SynopAnalyzerHandler(Thing thing, LocationProvider locationProvider, @Nullable StationDB stationDB) {
+    private Optional<ScheduledFuture<?>> refreshJob = Optional.empty();
+    private @NonNullByDefault({}) String formattedStationId;
+
+    public SynopAnalyzerHandler(Thing thing, LocationProvider locationProvider, List<Station> stations) {
         super(thing);
         this.locationProvider = locationProvider;
-        this.stationDB = stationDB;
+        this.stations = stations;
     }
 
     @Override
     public void initialize() {
         SynopAnalyzerConfiguration configuration = getConfigAs(SynopAnalyzerConfiguration.class);
-        formattedStationId = String.format("%05d", configuration.stationId);
-        logger.info("Scheduling Synop update thread to run every {} minute for Station '{}'",
-                configuration.refreshInterval, formattedStationId);
+        formattedStationId = "%05d".formatted(configuration.stationId);
+        logger.info("Scheduling Synop update every {} minute for Station '{}'", configuration.refreshInterval,
+                formattedStationId);
 
-        StationDB stations = stationDB;
-        if (thing.getProperties().isEmpty() && stations != null) {
-            discoverAttributes(stations, configuration.stationId);
+        if (thing.getProperties().isEmpty()) {
+            discoverAttributes(configuration.stationId, locationProvider.getLocation());
         }
 
-        executionJob = scheduler.scheduleWithFixedDelay(this::updateSynopChannels, 0, configuration.refreshInterval,
-                TimeUnit.MINUTES);
+        updateStatus(ThingStatus.UNKNOWN);
+
+        refreshJob = Optional.of(scheduler.scheduleWithFixedDelay(this::updateChannels, 0,
+                configuration.refreshInterval, TimeUnit.MINUTES));
     }
 
-    protected void discoverAttributes(StationDB stations, int stationId) {
-        stations.stations.stream().filter(s -> stationId == s.idOmm).findFirst().ifPresent(s -> {
-            Map<String, String> properties = new HashMap<>();
-            properties.put("Usual name", s.usualName);
-            properties.put("Location", s.getLocation());
+    private void discoverAttributes(int stationId, @Nullable PointType serverLocation) {
+        stations.stream().filter(s -> stationId == s.idOmm).findFirst().ifPresent(station -> {
+            Map<String, String> properties = new HashMap<>(
+                    Map.of(USUAL_NAME, station.usualName, LOCATION, station.getLocation()));
 
-            PointType stationLocation = new PointType(s.getLocation());
-            PointType serverLocation = locationProvider.getLocation();
             if (serverLocation != null) {
+                PointType stationLocation = new PointType(station.getLocation());
                 DecimalType distance = serverLocation.distanceFrom(stationLocation);
 
-                properties.put("Distance", new QuantityType<>(distance, SIUnits.METRE).toString());
+                properties.put(DISTANCE, new QuantityType<>(distance, SIUnits.METRE).toString());
             }
             updateProperties(properties);
         });
@@ -138,42 +141,45 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
 
                     return createSynopObject(synopMessage);
                 }
-                logger.warn("Message does not belong to station {} : {}", formattedStationId, message);
+                logger.warn("Message does not belong to station {}: {}", formattedStationId, message);
             }
             logger.warn("No valid Synop found for last 24h");
         } catch (IOException e) {
-            logger.warn("Synop request timedout : {}", e.getMessage());
+            logger.warn("Synop request timedout: {}", e.getMessage());
         }
         return Optional.empty();
     }
 
-    private void updateSynopChannels() {
+    private void updateChannels() {
         logger.debug("Updating device channels");
 
-        Optional<Synop> synop = getLastAvailableSynop();
-        updateStatus(synop.isPresent() ? ThingStatus.ONLINE : ThingStatus.OFFLINE);
-        synop.ifPresent(theSynop -> {
+        getLastAvailableSynop().ifPresentOrElse(synop -> {
+            updateStatus(ThingStatus.ONLINE);
             getThing().getChannels().forEach(channel -> {
                 String channelId = channel.getUID().getId();
                 if (isLinked(channelId)) {
-                    updateState(channelId, getChannelState(channelId, theSynop));
+                    updateState(channelId, getChannelState(channelId, synop));
                 }
             });
-        });
+        }, () -> updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.NONE, "No Synop message available"));
     }
 
     private State getChannelState(String channelId, Synop synop) {
+        int octa = synop.getOcta();
+        Integer direction = synop.getWindDirection();
         switch (channelId) {
             case HORIZONTAL_VISIBILITY:
                 return new StringType(synop.getHorizontalVisibility().name());
             case OCTA:
-                return new DecimalType(Math.max(0, synop.getOcta()));
+                return octa >= 0 ? new DecimalType(octa) : UnDefType.NULL;
             case ATTENUATION_FACTOR:
-                double kc = Math.max(0, Math.min(synop.getOcta(), OCTA_MAX)) / OCTA_MAX;
-                kc = 1 - 0.75 * Math.pow(kc, KASTEN_POWER);
-                return new DecimalType(kc);
+                if (octa >= 0) {
+                    double kc = Math.max(0, Math.min(octa, OCTA_MAX)) / OCTA_MAX;
+                    kc = 1 - 0.75 * Math.pow(kc, KASTEN_POWER);
+                    return new DecimalType(kc);
+                }
+                return UnDefType.NULL;
             case OVERCAST:
-                int octa = synop.getOcta();
                 Overcast overcast = Overcast.fromOcta(octa);
                 return overcast == Overcast.UNDEFINED ? UnDefType.NULL : new StringType(overcast.name());
             case PRESSURE:
@@ -181,24 +187,24 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
             case TEMPERATURE:
                 return new QuantityType<>(synop.getTemperature(), TEMPERATURE_UNIT);
             case WIND_ANGLE:
-                return new QuantityType<>(synop.getWindDirection(), WIND_DIRECTION_UNIT);
+                return direction != null ? new QuantityType<>(direction, WIND_DIRECTION_UNIT) : UnDefType.NULL;
             case WIND_DIRECTION:
-                return new StringType(WindDirections.getWindDirection(synop.getWindDirection()).name());
+                return direction != null ? new StringType(WindDirections.getWindDirection(direction).name())
+                        : UnDefType.NULL;
             case WIND_STRENGTH:
                 return getWindStrength(synop);
             case WIND_SPEED_BEAUFORT:
                 QuantityType<Speed> wsKpH = getWindStrength(synop).toUnit(SIUnits.KILOMETRE_PER_HOUR);
-                return (wsKpH != null) ? new DecimalType(Math.round(Math.pow(wsKpH.floatValue() / 3.01, 0.666666666)))
+                return wsKpH != null ? new DecimalType(Math.round(Math.pow(wsKpH.floatValue() / 3.01, 0.666666666)))
                         : UnDefType.NULL;
             case TIME_UTC:
                 ZonedDateTime now = ZonedDateTime.now(ZoneOffset.UTC);
                 int year = synop.getYear() == 0 ? now.getYear() : synop.getYear();
                 int month = synop.getMonth() == 0 ? now.getMonth().getValue() : synop.getMonth();
-                ZonedDateTime zdt = ZonedDateTime.of(year, month, synop.getDay(), synop.getHour(), 0, 0, 0,
-                        ZoneOffset.UTC);
-                return new DateTimeType(zdt);
+                return new DateTimeType(
+                        ZonedDateTime.of(year, month, synop.getDay(), synop.getHour(), 0, 0, 0, ZoneOffset.UTC));
             default:
-                logger.error("Unsupported channel Id '{}'", channelId);
+                logger.error("Unsupported channel '{}'", channelId);
                 return UnDefType.UNDEF;
         }
     }
@@ -225,22 +231,19 @@ public class SynopAnalyzerHandler extends BaseThingHandler {
     private String forgeURL() {
         ZonedDateTime utc = ZonedDateTime.now(ZoneOffset.UTC).minusDays(1);
         String beginDate = SYNOP_DATE_FORMAT.format(utc);
-        return String.format(OGIMET_SYNOP_PATH, formattedStationId, beginDate);
+        return OGIMET_SYNOP_PATH.formatted(formattedStationId, beginDate);
     }
 
     @Override
     public void dispose() {
-        ScheduledFuture<?> job = this.executionJob;
-        if (job != null && !job.isCancelled()) {
-            job.cancel(true);
-        }
-        executionJob = null;
+        refreshJob.ifPresent(job -> job.cancel(true));
+        refreshJob = Optional.empty();
     }
 
     @Override
     public void handleCommand(ChannelUID channelUID, Command command) {
         if (command == RefreshType.REFRESH) {
-            updateSynopChannels();
+            updateChannels();
         }
     }
 }
