@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,7 +17,6 @@ import static org.openhab.binding.wemo.internal.WemoUtil.*;
 
 import java.io.StringReader;
 import java.net.URL;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -59,7 +58,7 @@ public class WemoLinkDiscoveryService extends AbstractDiscoveryService implement
 
     private final Logger logger = LoggerFactory.getLogger(WemoLinkDiscoveryService.class);
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_MZ100);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_MZ100);
 
     public static final String NORMALIZE_ID_REGEX = "[^a-zA-Z0-9_]";
 
@@ -119,11 +118,20 @@ public class WemoLinkDiscoveryService extends AbstractDiscoveryService implement
             logger.trace("devUDN = '{}'", devUDN);
 
             String soapHeader = "\"urn:Belkin:service:bridge:1#GetEndDevices\"";
-            String content = "<?xml version=\"1.0\"?>"
-                    + "<s:Envelope xmlns:s=\"http://schemas.xmlsoap.org/soap/envelope/\" s:encodingStyle=\"http://schemas.xmlsoap.org/soap/encoding/\">"
-                    + "<s:Body>" + "<u:GetEndDevices xmlns:u=\"urn:Belkin:service:bridge:1\">" + "<DevUDN>" + devUDN
-                    + "</DevUDN><ReqListType>PAIRED_LIST</ReqListType>" + "</u:GetEndDevices>" + "</s:Body>"
-                    + "</s:Envelope>";
+            String content = """
+                    <?xml version="1.0"?>\
+                    <s:Envelope xmlns:s="http://schemas.xmlsoap.org/soap/envelope/" s:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/">\
+                    <s:Body>\
+                    <u:GetEndDevices xmlns:u="urn:Belkin:service:bridge:1">\
+                    <DevUDN>\
+                    """
+                    + devUDN + """
+                            </DevUDN>\
+                            <ReqListType>PAIRED_LIST</ReqListType>\
+                            </u:GetEndDevices>\
+                            </s:Body>\
+                            </s:Envelope>\
+                            """;
 
             URL descriptorURL = service.getDescriptorURL(this);
 
@@ -133,104 +141,100 @@ public class WemoLinkDiscoveryService extends AbstractDiscoveryService implement
 
                 String endDeviceRequest = wemoHttpCaller.executeCall(wemoURL, soapHeader, content);
 
-                if (endDeviceRequest != null) {
-                    logger.trace("endDeviceRequest answered '{}'", endDeviceRequest);
+                logger.trace("endDeviceRequest answered '{}'", endDeviceRequest);
 
-                    try {
-                        String stringParser = substringBetween(endDeviceRequest, "<DeviceLists>", "</DeviceLists>");
+                try {
+                    String stringParser = substringBetween(endDeviceRequest, "<DeviceLists>", "</DeviceLists>");
 
-                        stringParser = unescapeXml(stringParser);
+                    stringParser = unescapeXml(stringParser);
 
-                        // check if there are already paired devices with WeMo Link
-                        if ("0".equals(stringParser)) {
-                            logger.debug("There are no devices connected with WeMo Link. Exit discovery");
-                            return;
-                        }
-
-                        // Build parser for received <DeviceList>
-                        DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
-                        // see
-                        // https://cheatsheetseries.owasp.org/cheatsheets/XML_External_Entity_Prevention_Cheat_Sheet.html
-                        dbf.setFeature("http://xml.org/sax/features/external-general-entities", false);
-                        dbf.setFeature("http://xml.org/sax/features/external-parameter-entities", false);
-                        dbf.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
-                        dbf.setXIncludeAware(false);
-                        dbf.setExpandEntityReferences(false);
-                        DocumentBuilder db = dbf.newDocumentBuilder();
-                        InputSource is = new InputSource();
-                        is.setCharacterStream(new StringReader(stringParser));
-
-                        Document doc = db.parse(is);
-                        NodeList nodes = doc.getElementsByTagName("DeviceInfo");
-
-                        // iterate the devices
-                        for (int i = 0; i < nodes.getLength(); i++) {
-                            Element element = (Element) nodes.item(i);
-
-                            NodeList deviceIndex = element.getElementsByTagName("DeviceIndex");
-                            Element line = (Element) deviceIndex.item(0);
-                            logger.trace("DeviceIndex: {}", getCharacterDataFromElement(line));
-
-                            NodeList deviceID = element.getElementsByTagName("DeviceID");
-                            line = (Element) deviceID.item(0);
-                            String endDeviceID = getCharacterDataFromElement(line);
-                            logger.trace("DeviceID: {}", endDeviceID);
-
-                            NodeList friendlyName = element.getElementsByTagName("FriendlyName");
-                            line = (Element) friendlyName.item(0);
-                            String endDeviceName = getCharacterDataFromElement(line);
-                            logger.trace("FriendlyName: {}", endDeviceName);
-
-                            NodeList vendor = element.getElementsByTagName("Manufacturer");
-                            line = (Element) vendor.item(0);
-                            String endDeviceVendor = getCharacterDataFromElement(line);
-                            logger.trace("Manufacturer: {}", endDeviceVendor);
-
-                            NodeList model = element.getElementsByTagName("ModelCode");
-                            line = (Element) model.item(0);
-                            String endDeviceModelID = getCharacterDataFromElement(line);
-                            endDeviceModelID = endDeviceModelID.replaceAll(NORMALIZE_ID_REGEX, "_");
-
-                            logger.trace("ModelCode: {}", endDeviceModelID);
-
-                            if (SUPPORTED_THING_TYPES.contains(new ThingTypeUID(BINDING_ID, endDeviceModelID))) {
-                                logger.debug("Discovered a WeMo LED Light thing with ID '{}'", endDeviceID);
-
-                                ThingUID bridgeUID = wemoBridgeHandler.getThing().getUID();
-                                ThingTypeUID thingTypeUID = new ThingTypeUID(BINDING_ID, endDeviceModelID);
-
-                                if (thingTypeUID.equals(THING_TYPE_MZ100)) {
-                                    String thingLightId = endDeviceID;
-                                    ThingUID thingUID = new ThingUID(thingTypeUID, bridgeUID, thingLightId);
-
-                                    Map<String, Object> properties = new HashMap<>(1);
-                                    properties.put(DEVICE_ID, endDeviceID);
-
-                                    DiscoveryResult discoveryResult = DiscoveryResultBuilder.create(thingUID)
-                                            .withProperties(properties)
-                                            .withBridge(wemoBridgeHandler.getThing().getUID()).withLabel(endDeviceName)
-                                            .build();
-
-                                    thingDiscovered(discoveryResult);
-                                }
-                            } else {
-                                logger.debug("Discovered an unsupported device :");
-                                logger.debug("DeviceIndex : {}", getCharacterDataFromElement(line));
-                                logger.debug("DeviceID    : {}", endDeviceID);
-                                logger.debug("FriendlyName: {}", endDeviceName);
-                                logger.debug("Manufacturer: {}", endDeviceVendor);
-                                logger.debug("ModelCode   : {}", endDeviceModelID);
-                            }
-
-                        }
-                    } catch (Exception e) {
-                        logger.error("Failed to parse endDevices for bridge '{}'",
-                                wemoBridgeHandler.getThing().getUID(), e);
+                    // check if there are already paired devices with WeMo Link
+                    if ("0".equals(stringParser)) {
+                        logger.debug("There are no devices connected with WeMo Link. Exit discovery");
+                        return;
                     }
+
+                    // Build parser for received <DeviceList>
+                    DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
+                    // see
+                    // https://cheatsheetseries.owasp.org/cheatsheets/XML_External_Entity_Prevention_Cheat_Sheet.html
+                    dbf.setFeature("http://xml.org/sax/features/external-general-entities", false);
+                    dbf.setFeature("http://xml.org/sax/features/external-parameter-entities", false);
+                    dbf.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
+                    dbf.setXIncludeAware(false);
+                    dbf.setExpandEntityReferences(false);
+                    DocumentBuilder db = dbf.newDocumentBuilder();
+                    InputSource is = new InputSource();
+                    is.setCharacterStream(new StringReader(stringParser));
+
+                    Document doc = db.parse(is);
+                    NodeList nodes = doc.getElementsByTagName("DeviceInfo");
+
+                    // iterate the devices
+                    for (int i = 0; i < nodes.getLength(); i++) {
+                        Element element = (Element) nodes.item(i);
+
+                        NodeList deviceIndex = element.getElementsByTagName("DeviceIndex");
+                        Element line = (Element) deviceIndex.item(0);
+                        logger.trace("DeviceIndex: {}", getCharacterDataFromElement(line));
+
+                        NodeList deviceID = element.getElementsByTagName("DeviceID");
+                        line = (Element) deviceID.item(0);
+                        String endDeviceID = getCharacterDataFromElement(line);
+                        logger.trace("DeviceID: {}", endDeviceID);
+
+                        NodeList friendlyName = element.getElementsByTagName("FriendlyName");
+                        line = (Element) friendlyName.item(0);
+                        String endDeviceName = getCharacterDataFromElement(line);
+                        logger.trace("FriendlyName: {}", endDeviceName);
+
+                        NodeList vendor = element.getElementsByTagName("Manufacturer");
+                        line = (Element) vendor.item(0);
+                        String endDeviceVendor = getCharacterDataFromElement(line);
+                        logger.trace("Manufacturer: {}", endDeviceVendor);
+
+                        NodeList model = element.getElementsByTagName("ModelCode");
+                        line = (Element) model.item(0);
+                        String endDeviceModelID = getCharacterDataFromElement(line);
+                        endDeviceModelID = endDeviceModelID.replaceAll(NORMALIZE_ID_REGEX, "_");
+
+                        logger.trace("ModelCode: {}", endDeviceModelID);
+
+                        if (SUPPORTED_THING_TYPES.contains(new ThingTypeUID(BINDING_ID, endDeviceModelID))) {
+                            logger.debug("Discovered a WeMo LED Light thing with ID '{}'", endDeviceID);
+
+                            ThingUID bridgeUID = wemoBridgeHandler.getThing().getUID();
+                            ThingTypeUID thingTypeUID = new ThingTypeUID(BINDING_ID, endDeviceModelID);
+
+                            if (thingTypeUID.equals(THING_TYPE_MZ100)) {
+                                String thingLightId = endDeviceID;
+                                ThingUID thingUID = new ThingUID(thingTypeUID, bridgeUID, thingLightId);
+
+                                Map<String, Object> properties = new HashMap<>(1);
+                                properties.put(DEVICE_ID, endDeviceID);
+
+                                DiscoveryResult discoveryResult = DiscoveryResultBuilder.create(thingUID)
+                                        .withProperties(properties).withBridge(wemoBridgeHandler.getThing().getUID())
+                                        .withLabel(endDeviceName).build();
+
+                                thingDiscovered(discoveryResult);
+                            }
+                        } else {
+                            logger.debug("Discovered an unsupported device :");
+                            logger.debug("DeviceIndex : {}", getCharacterDataFromElement(line));
+                            logger.debug("DeviceID    : {}", endDeviceID);
+                            logger.debug("FriendlyName: {}", endDeviceName);
+                            logger.debug("Manufacturer: {}", endDeviceVendor);
+                            logger.debug("ModelCode   : {}", endDeviceModelID);
+                        }
+
+                    }
+                } catch (Exception e) {
+                    logger.warn("Failed to parse endDevices for bridge '{}'", wemoBridgeHandler.getThing().getUID(), e);
                 }
             }
         } catch (Exception e) {
-            logger.error("Failed to get endDevices for bridge '{}'", wemoBridgeHandler.getThing().getUID(), e);
+            logger.warn("Failed to get endDevices for bridge '{}'", wemoBridgeHandler.getThing().getUID(), e);
         }
     }
 
@@ -278,8 +282,7 @@ public class WemoLinkDiscoveryService extends AbstractDiscoveryService implement
 
     public static String getCharacterDataFromElement(Element e) {
         Node child = e.getFirstChild();
-        if (child instanceof CharacterData) {
-            CharacterData cd = (CharacterData) child;
+        if (child instanceof CharacterData cd) {
             return cd.getData();
         }
         return "?";
