@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -22,12 +22,14 @@ import java.nio.file.StandardOpenOption;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Optional;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
 import software.amazon.awssdk.core.retry.RetryMode;
+import software.amazon.awssdk.core.retry.RetryPolicy;
 import software.amazon.awssdk.regions.Region;
 
 /**
@@ -58,12 +60,12 @@ public class DynamoDBConfigTest {
 
     @Test
     public void testInvalidRegion() throws Exception {
-        assertNull(DynamoDBConfig.fromConfig(Collections.singletonMap("region", "foobie")));
+        assertNull(DynamoDBConfig.fromConfig(Map.of("region", "foobie")));
     }
 
     @Test
     public void testRegionOnly() throws Exception {
-        assertNull(DynamoDBConfig.fromConfig(Collections.singletonMap("region", "eu-west-1")));
+        assertNull(DynamoDBConfig.fromConfig(Map.of("region", "eu-west-1")));
     }
 
     @Test
@@ -77,7 +79,7 @@ public class DynamoDBConfigTest {
         assertEquals("openhab-", fromConfig.getTablePrefixLegacy());
         assertEquals(1, fromConfig.getReadCapacityUnits());
         assertEquals(1, fromConfig.getWriteCapacityUnits());
-        assertEquals(RetryMode.STANDARD, fromConfig.getRetryPolicy().retryMode());
+        assertEquals(Optional.empty(), fromConfig.getRetryPolicy().map(RetryPolicy::retryMode));
         assertEquals(ExpectedTableSchema.MAYBE_LEGACY, fromConfig.getTableRevision());
     }
 
@@ -85,10 +87,12 @@ public class DynamoDBConfigTest {
     @Test
     public void testRegionWithProfilesConfigFile() throws Exception {
         Path credsFile = Files.createFile(Paths.get(folder.getPath(), "creds"));
-        Files.write(
-                credsFile, ("[fooprofile]\n" + "aws_access_key_id=testAccessKey\n"
-                        + "aws_secret_access_key=testSecretKey\n" + "aws_session_token=testSessionToken\n").getBytes(),
-                StandardOpenOption.TRUNCATE_EXISTING);
+        Files.write(credsFile, ("""
+                [fooprofile]
+                aws_access_key_id=testAccessKey
+                aws_secret_access_key=testSecretKey
+                aws_session_token=testSessionToken
+                """).getBytes(), StandardOpenOption.TRUNCATE_EXISTING);
 
         DynamoDBConfig fromConfig = DynamoDBConfig.fromConfig(mapFrom("region", "eu-west-1", "profilesConfigFile",
                 credsFile.toAbsolutePath().toString(), "profile", "fooprofile"));
@@ -97,7 +101,7 @@ public class DynamoDBConfigTest {
         assertEquals("openhab-", fromConfig.getTablePrefixLegacy());
         assertEquals(1, fromConfig.getReadCapacityUnits());
         assertEquals(1, fromConfig.getWriteCapacityUnits());
-        assertEquals(RetryMode.STANDARD, fromConfig.getRetryPolicy().retryMode());
+        assertEquals(Optional.empty(), fromConfig.getRetryPolicy().map(RetryPolicy::retryMode));
         assertEquals(ExpectedTableSchema.MAYBE_LEGACY, fromConfig.getTableRevision());
     }
 
@@ -105,10 +109,13 @@ public class DynamoDBConfigTest {
     @Test
     public void testProfilesConfigFileRetryMode() throws Exception {
         Path credsFile = Files.createFile(Paths.get(folder.getPath(), "creds"));
-        Files.write(credsFile,
-                ("[fooprofile]\n" + "aws_access_key_id=testAccessKey\n" + "aws_secret_access_key=testSecretKey\n"
-                        + "aws_session_token=testSessionToken\n" + "retry_mode=legacy").getBytes(),
-                StandardOpenOption.TRUNCATE_EXISTING);
+        Files.write(credsFile, ("""
+                [fooprofile]
+                aws_access_key_id=testAccessKey
+                aws_secret_access_key=testSecretKey
+                aws_session_token=testSessionToken
+                retry_mode=legacy\
+                """).getBytes(), StandardOpenOption.TRUNCATE_EXISTING);
 
         DynamoDBConfig fromConfig = DynamoDBConfig.fromConfig(mapFrom("region", "eu-west-1", "profilesConfigFile",
                 credsFile.toAbsolutePath().toString(), "profile", "fooprofile"));
@@ -117,7 +124,7 @@ public class DynamoDBConfigTest {
         assertEquals("openhab-", fromConfig.getTablePrefixLegacy());
         assertEquals(1, fromConfig.getReadCapacityUnits());
         assertEquals(1, fromConfig.getWriteCapacityUnits());
-        assertEquals(RetryMode.LEGACY, fromConfig.getRetryPolicy().retryMode());
+        assertEquals(Optional.of(RetryMode.LEGACY), fromConfig.getRetryPolicy().map(RetryPolicy::retryMode));
         assertEquals(ExpectedTableSchema.MAYBE_LEGACY, fromConfig.getTableRevision());
     }
 
@@ -129,10 +136,12 @@ public class DynamoDBConfigTest {
     @Test
     public void testRegionWithInvalidProfilesConfigFile() throws Exception {
         Path credsFile = Files.createFile(Paths.get(folder.getPath(), "creds"));
-        Files.write(credsFile,
-                ("[fooprofile]\n" + "aws_access_key_idINVALIDKEY=testAccessKey\n"
-                        + "aws_secret_access_key=testSecretKey\n" + "aws_session_token=testSessionToken\n").getBytes(),
-                StandardOpenOption.TRUNCATE_EXISTING);
+        Files.write(credsFile, ("""
+                [fooprofile]
+                aws_access_key_idINVALIDKEY=testAccessKey
+                aws_secret_access_key=testSecretKey
+                aws_session_token=testSessionToken
+                """).getBytes(), StandardOpenOption.TRUNCATE_EXISTING);
 
         assertNull(DynamoDBConfig.fromConfig(mapFrom("region", "eu-west-1", "profilesConfigFile",
                 credsFile.toFile().getAbsolutePath(), "profile", "fooprofile")));
@@ -141,10 +150,12 @@ public class DynamoDBConfigTest {
     @Test
     public void testRegionWithProfilesConfigFileMissingProfile() throws Exception {
         Path credsFile = Files.createFile(Paths.get(folder.getPath(), "creds"));
-        Files.write(
-                credsFile, ("[fooprofile]\n" + "aws_access_key_id=testAccessKey\n"
-                        + "aws_secret_access_key=testSecretKey\n" + "aws_session_token=testSessionToken\n").getBytes(),
-                StandardOpenOption.TRUNCATE_EXISTING);
+        Files.write(credsFile, ("""
+                [fooprofile]
+                aws_access_key_id=testAccessKey
+                aws_secret_access_key=testSecretKey
+                aws_session_token=testSessionToken
+                """).getBytes(), StandardOpenOption.TRUNCATE_EXISTING);
 
         assertNull(DynamoDBConfig.fromConfig(
                 mapFrom("region", "eu-west-1", "profilesConfigFile", credsFile.toAbsolutePath().toString())));
@@ -161,7 +172,7 @@ public class DynamoDBConfigTest {
         assertEquals("foobie-", fromConfig.getTablePrefixLegacy());
         assertEquals(1, fromConfig.getReadCapacityUnits());
         assertEquals(1, fromConfig.getWriteCapacityUnits());
-        assertEquals(RetryMode.STANDARD, fromConfig.getRetryPolicy().retryMode());
+        assertEquals(Optional.empty(), fromConfig.getRetryPolicy().map(RetryPolicy::retryMode));
         assertEquals(ExpectedTableSchema.LEGACY, fromConfig.getTableRevision());
         assertNull(fromConfig.getExpireDays()); // not supported with legacy
     }
@@ -177,7 +188,7 @@ public class DynamoDBConfigTest {
         assertEquals("mytable", fromConfig.getTable());
         assertEquals(1, fromConfig.getReadCapacityUnits());
         assertEquals(1, fromConfig.getWriteCapacityUnits());
-        assertEquals(RetryMode.STANDARD, fromConfig.getRetryPolicy().retryMode());
+        assertEquals(Optional.empty(), fromConfig.getRetryPolicy().map(RetryPolicy::retryMode));
         assertEquals(ExpectedTableSchema.NEW, fromConfig.getTableRevision());
         assertEquals(105, fromConfig.getExpireDays());
     }
@@ -193,7 +204,7 @@ public class DynamoDBConfigTest {
         assertEquals("openhab-", fromConfig.getTablePrefixLegacy());
         assertEquals(5, fromConfig.getReadCapacityUnits());
         assertEquals(1, fromConfig.getWriteCapacityUnits());
-        assertEquals(RetryMode.STANDARD, fromConfig.getRetryPolicy().retryMode());
+        assertEquals(Optional.empty(), fromConfig.getRetryPolicy().map(RetryPolicy::retryMode));
         assertEquals(ExpectedTableSchema.MAYBE_LEGACY, fromConfig.getTableRevision());
         assertEquals(105, fromConfig.getExpireDays());
     }
@@ -209,7 +220,7 @@ public class DynamoDBConfigTest {
         assertEquals("openhab-", fromConfig.getTablePrefixLegacy());
         assertEquals(1, fromConfig.getReadCapacityUnits());
         assertEquals(5, fromConfig.getWriteCapacityUnits());
-        assertEquals(RetryMode.STANDARD, fromConfig.getRetryPolicy().retryMode());
+        assertEquals(Optional.empty(), fromConfig.getRetryPolicy().map(RetryPolicy::retryMode));
         assertEquals(ExpectedTableSchema.MAYBE_LEGACY, fromConfig.getTableRevision());
         assertNull(fromConfig.getExpireDays()); // default is null
     }
@@ -225,7 +236,7 @@ public class DynamoDBConfigTest {
         assertEquals("openhab-", fromConfig.getTablePrefixLegacy());
         assertEquals(3, fromConfig.getReadCapacityUnits());
         assertEquals(5, fromConfig.getWriteCapacityUnits());
-        assertEquals(RetryMode.STANDARD, fromConfig.getRetryPolicy().retryMode());
+        assertEquals(Optional.empty(), fromConfig.getRetryPolicy().map(RetryPolicy::retryMode));
         assertEquals(ExpectedTableSchema.MAYBE_LEGACY, fromConfig.getTableRevision());
     }
 
@@ -241,7 +252,7 @@ public class DynamoDBConfigTest {
         assertEquals("openhab-", fromConfig.getTablePrefixLegacy());
         assertEquals(3, fromConfig.getReadCapacityUnits());
         assertEquals(5, fromConfig.getWriteCapacityUnits());
-        assertEquals(RetryMode.STANDARD, fromConfig.getRetryPolicy().retryMode());
+        assertEquals(Optional.empty(), fromConfig.getRetryPolicy().map(RetryPolicy::retryMode));
         assertEquals(ExpectedTableSchema.MAYBE_LEGACY, fromConfig.getTableRevision());
     }
 }
