@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -20,19 +20,21 @@ import static org.openhab.binding.mielecloud.internal.util.MieleCloudBindingInte
 import static org.openhab.binding.mielecloud.internal.util.ReflectionUtil.setPrivate;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.openhab.binding.mielecloud.internal.MieleCloudBindingConstants;
 import org.openhab.binding.mielecloud.internal.auth.OAuthTokenRefresher;
 import org.openhab.binding.mielecloud.internal.auth.OpenHabOAuthTokenRefresher;
 import org.openhab.binding.mielecloud.internal.util.MieleCloudBindingIntegrationTestConstants;
+import org.openhab.binding.mielecloud.internal.util.ReflectionUtil;
 import org.openhab.binding.mielecloud.internal.webservice.MieleWebservice;
 import org.openhab.binding.mielecloud.internal.webservice.MieleWebserviceFactory;
 import org.openhab.binding.mielecloud.internal.webservice.api.DeviceState;
@@ -129,6 +131,12 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
         return Objects.requireNonNull(itemRegistry);
     }
 
+    @Override
+    protected void waitForAssert(Runnable assertion) {
+        // Use a larger timeout to avoid test failures in the CI build.
+        waitForAssert(assertion, 2 * DFL_TIMEOUT, 2 * DFL_SLEEP_TIME);
+    }
+
     private void setUpThingRegistry() {
         thingRegistry = getService(ThingRegistry.class, ThingRegistry.class);
         assertNotNull(thingRegistry, "Thing registry is missing");
@@ -162,7 +170,7 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
         OAuthFactory oAuthFactory = mock(OAuthFactory.class);
         when(oAuthFactory
                 .getOAuthClientService(MieleCloudBindingIntegrationTestConstants.BRIDGE_THING_UID.getAsString()))
-                        .thenReturn(oAuthClientService);
+                .thenReturn(oAuthClientService);
 
         OpenHabOAuthTokenRefresher tokenRefresher = getService(OAuthTokenRefresher.class,
                 OpenHabOAuthTokenRefresher.class);
@@ -173,9 +181,8 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
                 .create(MieleCloudBindingConstants.THING_TYPE_BRIDGE,
                         MieleCloudBindingIntegrationTestConstants.BRIDGE_THING_UID)
                 .withLabel("Miele@home Account")
-                .withConfiguration(
-                        new Configuration(Collections.singletonMap(MieleCloudBindingConstants.CONFIG_PARAM_EMAIL,
-                                MieleCloudBindingIntegrationTestConstants.EMAIL)))
+                .withConfiguration(new Configuration(Map.of(MieleCloudBindingConstants.CONFIG_PARAM_EMAIL,
+                        MieleCloudBindingIntegrationTestConstants.EMAIL)))
                 .build();
         assertNotNull(bridge);
 
@@ -201,15 +208,17 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     protected AbstractMieleThingHandler createThingHandler(ThingTypeUID thingTypeUid, ThingUID thingUid,
-            Class<? extends AbstractMieleThingHandler> expectedHandlerClass, String deviceIdentifier) {
+            Class<? extends AbstractMieleThingHandler> expectedHandlerClass, String deviceIdentifier,
+            String thingTypeVersion) {
         ThingRegistry registry = getThingRegistry();
 
         List<Channel> channels = createChannelsForThingHandler(thingTypeUid, thingUid);
 
         Thing thing = ThingBuilder.create(thingTypeUid, thingUid)
-                .withConfiguration(new Configuration(Collections
-                        .singletonMap(MieleCloudBindingConstants.CONFIG_PARAM_DEVICE_IDENTIFIER, deviceIdentifier)))
-                .withBridge(getBridge().getUID()).withChannels(channels).withLabel("DA-6996").build();
+                .withConfiguration(new Configuration(
+                        Map.of(MieleCloudBindingConstants.CONFIG_PARAM_DEVICE_IDENTIFIER, deviceIdentifier)))
+                .withBridge(getBridge().getUID()).withChannels(channels).withLabel("DA-6996")
+                .withProperty("thingTypeVersion", thingTypeVersion).build();
         assertNotNull(thing);
 
         registry.add(thing);
@@ -225,7 +234,18 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
 
         ThingHandler handler = thing.getHandler();
         assertNotNull(handler);
-        return (AbstractMieleThingHandler) Objects.requireNonNull(handler);
+        AbstractMieleThingHandler mieleThingHandler = (AbstractMieleThingHandler) Objects.requireNonNull(handler);
+
+        waitForAssert(() -> {
+            try {
+                assertNotNull(ReflectionUtil.invokePrivate(mieleThingHandler, "getBridge"));
+            } catch (NoSuchMethodException | SecurityException | IllegalAccessException | IllegalArgumentException e) {
+                throw new RuntimeException(e);
+            }
+            assertNotNull(getBridge().getThing(thingUid));
+        });
+
+        return mieleThingHandler;
     }
 
     private List<Channel> createChannelsForThingHandler(ThingTypeUID thingTypeUid, ThingUID thingUid) {
@@ -313,6 +333,9 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
         setUpThingRegistry();
         setUpItemRegistry();
         setUpWebservice();
+    }
+
+    protected void setUpBridgeAndThing() throws Exception {
         setUpBridge();
         thingHandler = setUpThingHandler();
     }
@@ -345,14 +368,26 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
      */
     protected abstract AbstractMieleThingHandler setUpThingHandler();
 
+    @AfterEach
+    public void tearDownAbstractMieleThingHandlerTest() {
+        getThingRegistry().forceRemove(getThingHandler().getThing().getUID());
+        getThingRegistry().forceRemove(getBridge().getUID());
+    }
+
     @Test
     public void testCachedStateIsQueriedOnInitialize() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // then:
         verify(getWebserviceMock()).dispatchDeviceState(SERIAL_NUMBER);
     }
 
     @Test
-    public void testThingStatusIsOfflineWithDetailGoneAndDetailMessageWhenDeviceIsRemoved() {
+    public void testThingStatusIsOfflineWithDetailGoneAndDetailMessageWhenDeviceIsRemoved() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getBridgeHandler().onDeviceRemoved(SERIAL_NUMBER);
 
@@ -373,8 +408,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testStatusIsSetToOnlineWhenDeviceStateIsValid() {
+    public void testStatusIsSetToOnlineWhenDeviceStateIsValid() throws Exception {
         // given:
+        setUpBridgeAndThing();
+
         DeviceState deviceState = createDeviceStateMock(StateType.ON, "On");
 
         // when:
@@ -385,8 +422,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testStatusIsSetToOfflineWhenDeviceIsNotConnected() {
+    public void testStatusIsSetToOfflineWhenDeviceIsNotConnected() throws Exception {
         // given:
+        setUpBridgeAndThing();
+
         DeviceState deviceState = createDeviceStateMock(StateType.NOT_CONNECTED, "Not connected");
 
         // when:
@@ -398,14 +437,16 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testFailingPutProcessActionDoesNotSetTheDeviceToOffline() {
+    public void testFailingPutProcessActionDoesNotSetTheDeviceToOffline() throws Exception {
         // given:
+        doThrow(MieleWebserviceException.class).when(getWebserviceMock()).putProcessAction(any(),
+                eq(ProcessAction.STOP));
+
+        setUpBridgeAndThing();
+
         DeviceState deviceState = createDeviceStateMock(StateType.ON, "On");
         getBridgeHandler().onDeviceStateUpdated(deviceState);
         assertThingStatusIs(getThingHandler().getThing(), ThingStatus.ONLINE, ThingStatusDetail.NONE);
-
-        doThrow(MieleWebserviceException.class).when(getWebserviceMock()).putProcessAction(any(),
-                eq(ProcessAction.STOP));
 
         // when:
         getThingHandler().triggerProcessAction(ProcessAction.STOP);
@@ -415,7 +456,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testHandleCommandProgramStartToStartStopChannel() {
+    public void testHandleCommandProgramStartToStartStopChannel() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getThingHandler().handleCommand(channel(PROGRAM_START_STOP),
                 new StringType(ProgramStatus.PROGRAM_STARTED.getState()));
@@ -427,7 +471,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testHandleCommandProgramStopToStartStopChannel() {
+    public void testHandleCommandProgramStopToStartStopChannel() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getThingHandler().handleCommand(channel(PROGRAM_START_STOP),
                 new StringType(ProgramStatus.PROGRAM_STOPPED.getState()));
@@ -439,7 +486,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testHandleCommandProgramStartToStartStopPauseChannel() {
+    public void testHandleCommandProgramStartToStartStopPauseChannel() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getThingHandler().handleCommand(channel(PROGRAM_START_STOP_PAUSE),
                 new StringType(ProgramStatus.PROGRAM_STARTED.getState()));
@@ -451,7 +501,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testHandleCommandProgramStopToStartStopPauseChannel() {
+    public void testHandleCommandProgramStopToStartStopPauseChannel() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getThingHandler().handleCommand(channel(PROGRAM_START_STOP_PAUSE),
                 new StringType(ProgramStatus.PROGRAM_STOPPED.getState()));
@@ -463,7 +516,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testHandleCommandProgramPauseToStartStopPauseChannel() {
+    public void testHandleCommandProgramPauseToStartStopPauseChannel() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getThingHandler().handleCommand(channel(PROGRAM_START_STOP_PAUSE),
                 new StringType(ProgramStatus.PROGRAM_PAUSED.getState()));
@@ -475,13 +531,15 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testFailingPutLightDoesNotSetTheDeviceToOffline() {
+    public void testFailingPutLightDoesNotSetTheDeviceToOffline() throws Exception {
         // given:
+        doThrow(MieleWebserviceException.class).when(getWebserviceMock()).putLight(any(), eq(true));
+
+        setUpBridgeAndThing();
+
         DeviceState deviceState = createDeviceStateMock(StateType.ON, "On");
         getBridgeHandler().onDeviceStateUpdated(deviceState);
         assertThingStatusIs(getThingHandler().getThing(), ThingStatus.ONLINE, ThingStatusDetail.NONE);
-
-        doThrow(MieleWebserviceException.class).when(getWebserviceMock()).putLight(any(), eq(true));
 
         // when:
         getThingHandler().triggerLight(true);
@@ -491,7 +549,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testHandleCommandLightOff() {
+    public void testHandleCommandLightOff() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getThingHandler().handleCommand(channel(LIGHT_SWITCH), OnOffType.OFF);
 
@@ -502,7 +563,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testHandleCommandLightOn() {
+    public void testHandleCommandLightOn() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getThingHandler().handleCommand(channel(LIGHT_SWITCH), OnOffType.ON);
 
@@ -513,7 +577,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testHandleCommandDoesNothingWhenCommandIsNotOfOnOffType() {
+    public void testHandleCommandDoesNothingWhenCommandIsNotOfOnOffType() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getThingHandler().handleCommand(channel(LIGHT_SWITCH), new DecimalType(0));
 
@@ -522,7 +589,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testHandleCommandPowerOn() {
+    public void testHandleCommandPowerOn() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getThingHandler().handleCommand(channel(POWER_ON_OFF), OnOffType.ON);
 
@@ -533,7 +603,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testHandleCommandPowerOff() {
+    public void testHandleCommandPowerOff() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getThingHandler().handleCommand(channel(POWER_ON_OFF), OnOffType.OFF);
 
@@ -544,7 +617,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testHandleCommandDoesNothingWhenPowerCommandIsNotOfOnOffType() {
+    public void testHandleCommandDoesNothingWhenPowerCommandIsNotOfOnOffType() throws Exception {
+        // given:
+        setUpBridgeAndThing();
+
         // when:
         getThingHandler().handleCommand(channel(POWER_ON_OFF), new DecimalType(0));
 
@@ -553,8 +629,10 @@ public abstract class AbstractMieleThingHandlerTest extends JavaOSGiTest {
     }
 
     @Test
-    public void testMissingPropertiesAreSetWhenAStateUpdateIsReceivedFromTheCloud() {
+    public void testMissingPropertiesAreSetWhenAStateUpdateIsReceivedFromTheCloud() throws Exception {
         // given:
+        setUpBridgeAndThing();
+
         assertFalse(getThingHandler().getThing().getProperties().containsKey(Thing.PROPERTY_SERIAL_NUMBER));
         assertFalse(getThingHandler().getThing().getProperties().containsKey(Thing.PROPERTY_MODEL_ID));
 
